# simple-blockchain

./: .gitignore  README.md  t.txt
images/: info.md
src/: CMakeLists.txt  main.cpp
src/Simple-Web-Server/: CMakeLists.txt  http_examples.cpp  server_http.hpp
src/Simple-Web-Server/web/: index.html
src/core/: Block.cpp  Block.hpp  CMakeLists.txt  ChatInterface.hpp  Cryprography.hpp  Cryptography.cpp  Cryptography.hpp  Interface.hpp  Ledger.cpp  Ledger.hpp  MerkleTree.hpp  Miner.cpp  Miner.hpp  Transaction.hpp  Utils.cpp  Utils.hpp
src/libfort/: CMakeLists.txt  libfort-targets.cmake
